# Evolution-of-Todo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  kafka-cluster.yaml  kafka-nodepool.yaml
.claude/: README-AGENTS-SKILLS.md
.github/workflows/: build-and-test.yml  deploy-production.yml  deploy-staging.yml
.specify/memory/: constitution.md
docs/: runbook.md
k8s/: README.md
monitoring/prometheus/: alerts.yaml  config.yaml
phase-1-todo-cli/: README.md  main.py  pyproject.toml
phase1-todo-cli/: README.md  main.py  pyproject.toml  test_import.py
phase1-todo-cli/src/cli/: main.py
phase1-todo-cli/src/models/: task.py
phase1-todo-cli/src/services/: __init__.py
phase2-todo-web/: .dockerignore  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  QUICK_SETUP.md  README.md  REMEDIATION_COMPLETE.md  docker-compose.yml
phase2-todo-web/backend/: CLAUDE.md  README.md  pytest.ini  requirements.txt
phase2-todo-web/frontend/: CLAUDE.md  package.json  tailwind.config.ts
phase3-todo-ai-chatbot/: CLAUDE_MD_COMPLETION_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICK_SETUP.md  README.md  REMEDIATION_COMPLETE.md
phase3-todo-ai-chatbot/backend/: .env.example  BCRYPT_FIX_SUMMARY.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml  pytest.ini  requirements.txt  verify_named_refs.py  verify_tools.py
phase3-todo-ai-chatbot/backend/alembic/: env.py
phase3-todo-ai-chatbot/backend/alembic/versions/: 001_initial_schema.py  002_add_is_favorite_and_recurring_type.py  003_add_conversations_and_messages.py
phase3-todo-ai-chatbot/backend/src/: config.py  main.py
phase3-todo-ai-chatbot/backend/src/api/: chat_router.py  task_router.py
phase3-todo-ai-chatbot/backend/src/auth/: dependencies.py  security.py
phase3-todo-ai-chatbot/backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
phase3-todo-ai-chatbot/backend/src/schemas/: __init__.py  task_schemas.py  user_schemas.py
phase3-todo-ai-chatbot/backend/src/services/: __init__.py  task_service.py
phase3-todo-ai-chatbot/backend/src/todo_chatkit/: __init__.py  server.py  store.py  tools.py
phase3-todo-ai-chatbot/backend/tests/: conftest.py
phase3-todo-ai-chatbot/backend/tests/integration/: test_chat_endpoint.py  test_task_sorting.py
phase3-todo-ai-chatbot/backend/tests/unit/: test_chatkit_store.py  test_conversation_service.py  test_mcp_tools.py  test_task_model.py
phase3-todo-ai-chatbot/frontend/: Dockerfile  tailwind.config.ts
phase4-kubernetes-deployment/: .dockerignore  .helmignore  README.md  docker-compose.yml
phase4-kubernetes-deployment/backend/: Dockerfile  pytest.ini  verify_named_refs.py
phase4-kubernetes-deployment/docs/: ENVIRONMENT_SETUP.md  KUBECTL_AI.md  QUICKSTART.md
phase4-kubernetes-deployment/frontend/: .dockerignore  Dockerfile  package.json
phase5-advanced-cloud-deployment/: COMPLETE_IMPLEMENTATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_VERIFICATION.md  PHASE5_100_PERCENT_COMPLETE.md  PHASE9_IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md  START_HERE.md  deploy-complete-stack.sh  docker-compose.local.yml
phase5-advanced-cloud-deployment/backend/: .dockerignore  .env.test  Dockerfile  pyproject.toml  requirements.txt  verify_named_refs.py
phase5-advanced-cloud-deployment/backend/alembic/: env.py
phase5-advanced-cloud-deployment/backend/alembic/versions/: 004_add_notification_settings_to_users.py  006_add_advanced_task_fields.py  007_create_recurring_patterns.py  008_create_reminders.py  009_create_audit_logs.py  010_add_performance_indexes.py  2397e6571266_add_reminder_offset_reminders_and_.py  5ee5ccbe4cc3_add_push_subscription_to_users_table.py
phase5-advanced-cloud-deployment/backend/src/: __init__.py  config.py  database.py  main.py
phase5-advanced-cloud-deployment/backend/src/api/: auth_router.py  health.py  metrics.py  task_router.py  websocket.py
phase5-advanced-cloud-deployment/backend/src/api/middleware/: logging.py  rate_limit.py  tracing.py
phase5-advanced-cloud-deployment/backend/src/api/routers/: audit.py  notifications.py  recurring.py  reminders.py
phase5-advanced-cloud-deployment/backend/src/lib/: logging.py
phase5-advanced-cloud-deployment/backend/src/models/: __init__.py  audit_log.py  message.py  recurring_pattern.py  reminder.py  task.py  user.py
phase5-advanced-cloud-deployment/backend/src/schemas/: recurring_schemas.py  reminder_schemas.py  task_schemas.py
phase5-advanced-cloud-deployment/backend/src/services/: cache_service.py  dapr_client.py  event_publisher.py  recurring_service.py  reminder_service.py  task_service.py  websocket_service.py
phase5-advanced-cloud-deployment/backend/src/todo_chatkit/: tools.py
phase5-advanced-cloud-deployment/backend/tests/: README.md  TEST_EXECUTION_SUMMARY.md
phase5-advanced-cloud-deployment/backend/tests/unit/: test_mcp_tools.py
phase5-advanced-cloud-deployment/docs/: architecture.md  dapr-setup.md  event-schemas.md  runbook.md
phase5-advanced-cloud-deployment/frontend/: CLAUDE.md  Dockerfile  tailwind.config.ts
phase5-advanced-cloud-deployment/scripts/: security-audit.sh  verify-prerequisites.sh
phase5-advanced-cloud-deployment/tests/: README.md  TESTING_COMPLETE.md  run-all-tests.sh
scripts/cloud/: deploy-cloud.sh  setup-cluster-oke.sh
scripts/local/: deploy-local.sh  install-dapr.sh  install-kafka.sh  setup-minikube.sh  teardown-local.sh
services/audit-service/: Dockerfile  pyproject.toml
services/audit-service/src/: consumer.py  logger.py
services/notification-service/: Dockerfile  pyproject.toml
services/notification-service/src/: consumer.py  notifier.py
services/recurring-task-service/: Dockerfile  pyproject.toml
services/recurring-task-service/src/: consumer.py  scheduler.py
specs/001-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+431 files in other folders)
