[project]
name = "backend"
version = "0.1.0"
description = "Todo AI Chatbot Backend with ChatKit and OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai-chatkit<=1.4.0",
    "openai-agents[litellm]>=0.6.2",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "httpx>=0.26.0",
]
