[project]
name = "backend"
version = "0.1.0"
description = "Todo AI Chatbot Backend with ChatKit and OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.10.11",        
    "aiokafka==0.13.0",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asgiref==3.11.1",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "black==24.10.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "coverage==7.13.3",
    "cryptography==46.0.3",
    "dapr==1.16.1",
    "deprecated==1.3.1",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "faker==33.1.0",
    "fastuuid==0.14.0",
    "filelock==3.20.1",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "fastapi==0.115.6",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.0",
    "griffe==1.15.0",
    "grpcio>=1.67.1",
    "grpcio-status==1.67.1",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.2.3",
    "idna==3.11",
    "importlib-metadata==8.5.0",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "litellm==1.80.11",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "mcp==1.25.0",
    "multidict==6.7.0",
    "mypy==1.13.0",
    "mypy-extensions==1.1.0",
    "uvicorn[standard]==0.32.1",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dateutil>=2.8.2",
    "packaging==25.0",
    "passlib==1.7.4",
    "pathspec==1.0.4",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "prometheus-client==0.24.1",
    "propcache==0.4.1",
    "protobuf==5.29.6",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic-core==2.41.5",
    "pytest-cov==6.0.0",
    "pywin32==311",
    "pyyaml==6.0.3",
    "groq>=0.13.0",
    "openai-chatkit<=1.4.0",
    "openai-agents[litellm]>=0.6.2",
    "openai==2.14.0",
    "opentelemetry-api==1.28.2",
    "opentelemetry-exporter-otlp-proto-common==1.28.2",
    "opentelemetry-exporter-otlp-proto-grpc==1.28.2",
    "opentelemetry-instrumentation==0.49b2",
    "opentelemetry-instrumentation-asgi==0.49b2",
    "opentelemetry-instrumentation-fastapi==0.49b2",
    "opentelemetry-instrumentation-requests==0.49b2",
    "opentelemetry-instrumentation-sqlalchemy==0.49b2",
    "opentelemetry-proto==1.28.2",
    "opentelemetry-sdk==1.28.2",
    "opentelemetry-semantic-conventions==0.49b2",
    "opentelemetry-util-http==0.49b2",
    "referencing==0.37.0",
    "regex==2026.1.15",
    "requests==2.32.5",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.45",
    "sse-starlette==3.0.3",
    "starlette==0.41.3",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "tqdm==4.67.1",
    "typer-slim==0.21.0",
    "types-requests==2.32.4.20250913",
    "typing-extensions==4.15.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "httpx>=0.26.0",
    "urllib3==2.6.2",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "wrapt==1.17.3",
    "yarl==1.22.0",
    "zipp==3.23.0"
]
