[project]
name = "audit-service"
version = "0.1.0"
description = "Audit Service - Consumes all task events and writes to audit_logs table"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiokafka>=0.11.0",
    "dapr>=1.14.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "httpx>=0.26.0",
]
